--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint src"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -24,6 +24,11 @@
   "devDependencies": {
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.1",
+    "@typescript-eslint/parser": "^7.11.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
