feat: implement PR-25/26 causal matching and cleanup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,28 @@ services:
           cpus: '2.0'
           memory: 4G
 
+  # Celery Beat — tarefas recorrentes (purge audit logs e jobs agendados)
+  beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+      target: worker
+    container_name: saas_impacto_celery_beat
+    env_file: ./backend/.env
+    environment:
+      POSTGRES_HOST: postgres
+      REDIS_HOST: redis
+      CELERY_BROKER_URL: redis://redis:6379/1
+      CELERY_RESULT_BACKEND: redis://redis:6379/2
+    depends_on:
+      - redis
+    networks:
+      - saas_network
+    command: >
+      celery -A app.tasks.celery_app.celery_app beat
+      --loglevel=info
+    restart: unless-stopped
+
   # PgAdmin - Interface gráfica para PostgreSQL (opcional)
   pgadmin:
     image: dpage/pgadmin4:latest
