--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,17 +6,37 @@ on:
       - "infra/terraform/**"
       - ".github/workflows/terraform.yml"
   workflow_dispatch:
+    inputs:
+      apply_environment:
+        description: "Ambiente para apply manual"
+        required: true
+        default: production
+        type: choice
+        options:
+          - production
+          - staging
   push:
     branches: ["main"]
     paths:
       - "infra/terraform/environments/production/**"
+      - "infra/terraform/environments/staging/**"
+
+permissions:
+  contents: read
+  id-token: write
+  pull-requests: write
+
+env:
+  TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
+  TF_STATE_BUCKET: ${{ secrets.TF_STATE_BUCKET }}
 
 jobs:
   plan:
     runs-on: ubuntu-latest
-    if: github.event_name != 'push'
-    env:
-      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_TERRAFORM_SA_KEY }}
+    if: github.event_name == 'pull_request'
+    defaults:
+      run:
+        working-directory: infra/terraform/environments/staging
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,20 +46,68 @@ jobs:
         with:
           terraform_version: 1.7.5
 
+      - name: Write GCP Terraform credentials
+        run: |
+          echo "${{ secrets.GCP_TERRAFORM_SA_KEY }}" > "${RUNNER_TEMP}/gcp-key.json"
+          echo "GOOGLE_APPLICATION_CREDENTIALS=${RUNNER_TEMP}/gcp-key.json" >> "${GITHUB_ENV}"
+
       - name: Terraform init
-        working-directory: infra/terraform/environments/staging
-        run: terraform init -reconfigure -backend-config="bucket=saas-impacto-tfstate" -backend-config="prefix=terraform/state"
+        run: |
+          terraform init -reconfigure \
+            -backend-config="bucket=${TF_STATE_BUCKET}" \
+            -backend-config="prefix=terraform/state"
 
       - name: Terraform plan
-        working-directory: infra/terraform/environments/staging
-        run: terraform plan -no-color
+        run: terraform plan -no-color -input=false -out=tfplan
+
+      - name: Export plan
+        run: terraform show -no-color tfplan > /tmp/plan-output.txt
+
+      - name: Comment PR with plan
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require("fs");
+            const path = "/tmp/plan-output.txt";
+            let plan = fs.readFileSync(path, "utf8");
+            if (plan.length > 65000) {
+              plan = plan.slice(0, 65000) + "\n... (truncado para caber no comentário)";
+            }
+
+            const marker = "<!-- terraform-plan-comment -->";
+            const body = `${marker}\n### Terraform Plan (staging)\n\`\`\`\n${plan}\n\`\`\``;
+
+            const issue = context.issue;
+            const { data: comments } = await github.paginate(
+              github.rest.issues.listComments,
+              { ...issue, per_page: 100 }
+            );
+
+            const existing = comments.find((comment) => comment.body && comment.body.includes(marker));
+            if (existing) {
+              await github.rest.issues.updateComment({
+                ...issue,
+                comment_id: existing.id,
+                body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                ...issue,
+                body,
+              });
+            }
 
   apply-staging:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: []
-    env:
-      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_TERRAFORM_SA_KEY }}
+    permissions:
+      contents: read
+      id-token: write
+    defaults:
+      run:
+        working-directory: infra/terraform/environments/staging
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,10 +117,42 @@ jobs:
         with:
           terraform_version: 1.7.5
 
+      - name: Write GCP Terraform credentials
+        run: |
+          echo "${{ secrets.GCP_TERRAFORM_SA_KEY }}" > "${RUNNER_TEMP}/gcp-key.json"
+          echo "GOOGLE_APPLICATION_CREDENTIALS=${RUNNER_TEMP}/gcp-key.json" >> "${GITHUB_ENV}"
+
       - name: Terraform init
-        working-directory: infra/terraform/environments/staging
-        run: terraform init -reconfigure -backend-config="bucket=saas-impacto-tfstate" -backend-config="prefix=terraform/state"
+        run: terraform init -reconfigure -backend-config="bucket=${TF_STATE_BUCKET}" -backend-config="prefix=terraform/state"
 
       - name: Terraform apply
-        working-directory: infra/terraform/environments/staging
+        run: terraform apply -auto-approve
+
+  apply-production:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.apply_environment == 'production'
+    permissions:
+      contents: read
+      id-token: write
+    defaults:
+      run:
+        working-directory: infra/terraform/environments/production
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.7.5
+
+      - name: Write GCP Terraform credentials
+        run: |
+          echo "${{ secrets.GCP_TERRAFORM_SA_KEY }}" > "${RUNNER_TEMP}/gcp-key.json"
+          echo "GOOGLE_APPLICATION_CREDENTIALS=${RUNNER_TEMP}/gcp-key.json" >> "${GITHUB_ENV}"
+
+      - name: Terraform init
+        run: terraform init -reconfigure -backend-config="bucket=${TF_STATE_BUCKET}" -backend-config="prefix=terraform/state"
+
+      - name: Terraform apply
         run: terraform apply -auto-approve
