--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 authlib==1.2.1
+structlog>=24.1.0
 
 # Tasks
 celery==5.3.6
