--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ opentelemetry-sdk==1.22.0
 opentelemetry-instrumentation-fastapi==0.43b0
 opentelemetry-instrumentation-sqlalchemy==0.43b0
 opentelemetry-exporter-otlp==1.22.0
+prometheus-client==0.20.0
 
 # Utilities
 python-dotenv==1.0.0
