--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@rollup/rollup-linux-arm64-gnu": "^4.59.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.1",
@@ -26,11 +27,11 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.11.1",
     "@typescript-eslint/parser": "^7.11.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
